--- a/backend/sample.env
+++ b/backend/sample.env
@@ -1,2 +1,3 @@
 PORT = 4000
 MONGODB_URL ='mongodb+srv://user:userpassword@cluster0.tuinafe.mongodb.net/?retryWrites=true&w=majority'
+#add your info here 
